laborations/lab2/testsuite/good/core107.cc
int main () {
  return test();
}

int test() {
  return 32;
}
