laborations/lab2/testsuite/bad/bad/arith_return_bool_div_int.cc
int main () {
  return false / 345;
}